# opengl_sdl3_freeglut_cpp

./: CMakeLists.txt  opengl-glut.cpp
distribute/windows-os/: dist-msys.bash
os-windows/: dist-msys.bash
